excluding some directories

--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,5 @@ name: Adobe Consulting Services
 pygments: true
 permalink:  none
 markdown: kramdown
+exclude:  [ Gemfile, Gemfile.lock, README.md, vendor/ ]
 baseurl: /
