switching to rouge

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: Adobe Consulting Services
-highlighter: pygments
+highlighter: rouge
 permalink:  none
 markdown: kramdown
 exclude:  [ Gemfile, Gemfile.lock, README.md, vendor/ ]
