Removed base_url to support redirect_from

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ name: Adobe Consulting Services
 highlighter: rouge
 markdown: kramdown
 exclude:  [ Gemfile, Gemfile.lock, README.md, vendor/ ]
-baseurl: /
+#baseurl: /
 collections:
   announcements:
     output: false
