--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ collections:
     output: true
   contributors:
     output: true
-gems:
+plugins:
   - jekyll-redirect-from
 sass:
     sass_dir: _sass
