--- a/_data/acs-aem-commons.yml
+++ b/_data/acs-aem-commons.yml
@@ -3,4 +3,5 @@ baseurl: /acs-aem-commons
 title: ACS AEM Commons
 version60: 2.14.0
 version62: 3.19.2
-version: 4.11.0
+version65: 4.12.0
+version: 5.0.2
