--- a/_data/acs-aem-commons.yml
+++ b/_data/acs-aem-commons.yml
@@ -2,3 +2,6 @@ name: acs-aem-commons
 baseurl: /acs-aem-commons
 title: ACS AEM Commons
 version: 5.3.0
+version60: 2.14.0		
+version62: 3.19.2		
+version65: 4.12.0
